--- a/school timetable system/vercel.json
+++ b/school timetable system/vercel.json
@@ -1,9 +1,5 @@
 {
-  "version": 2,
   "builds": [
-    { "src": "package.json", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
+    { "src": "school timetable system/package.json", "use": "@vercel/node" }
   ]
 }
