--- a/school timetable system/vercel.json
+++ b/school timetable system/vercel.json
@@ -1,5 +1,6 @@
 {
-  "builds": [
-    { "src": "school timetable system/package.json", "use": "@vercel/node" }
-  ]
+    "rewrites":[
+        {"source":  "/(.*)","destination":"/"
+    }
+    ]
 }
