--- a/sms-backend/.env
+++ b/sms-backend/.env
@@ -2,5 +2,5 @@ PORT=5000
 MONGO_URI=mongodb+srv://manu_db_user:ObvxQA11pntWuYYr@cluster0.vfmutsd.mongodb.net/SchoolTimeTable
 JWT_SECRET=myjwtsecret
 JWT_EXPIRES_IN=7d
-      manu_db_user
-      ObvxQA11pntWuYYr
+    #   manu_db_user
+    #   ObvxQA11pntWuYYr
